Added the content

--- a/index.html
+++ b/index.html
@@ -17,28 +17,61 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <!-- 
-    Easy And Perfect Solution For Your Business App,
+    <div class="top-image">
+      <img src="resources/background-png.png" alt="" />
+    </div>
 
-    47+ Components 
+    <div class="container">
+      <div class="header">
+        <p>Our Process</p>
+        <h1>Easy And Perfect Solution For Your Business App</h1>
+      </div>
 
-    Save time and build products with well-organized and customizable desktop components for Figma.
-
-    Documentation
-
-    Developer handoff made easy. Component and style guide documentation for your team in one place.
-
-    Design faster
-
-    Stop wasting time on creating everything from scratch for every new project you start.
-
-    Design faster
-
-    Easily apply your branding by changing font, color and component properties.
-    -->
+      <div class="text-container">
+        <div class="card">
+          <img src="resources/process-icon-1.svg" alt="icon one" />
+          <h2>47+ Components</h2>
+          <p>
+            Save time and build products with
+            <span>well-organized and customizable</span> desktop components for
+            Figma.
+          </p>
+        </div>
+        <div class="card">
+          <img src="resources/process-icon-2.svg" alt="icon two" />
+          <h2>Documentation</h2>
+          <p>
+            Developer handoff made easy. Component and style guide documentation
+            for your team in <span>one place.</span>
+          </p>
+        </div>
+        <div class="card">
+          <img src="resources/process-icon-3.svg" alt="icon three" />
+          <h2>Design faster</h2>
+          <p>
+            Stop wasting time on creating everything from scratch for<span>
+              every new project</span
+            >
+            you start.
+          </p>
+        </div>
+        <div class="card">
+          <img src="resources/process-icon-4.svg" alt="icon four" />
+          <h2>Customize</h2>
+          <p>
+            Easily apply your branding by changing font, color and
+            <span>component properties</span>.
+          </p>
+        </div>
+      </div>
+    </div>
 
     <div class="author-info">
-      Coded by <a href="#">Adeline Monsengo</a> | Challenge by
+      Coded by
+      <a href="https://github.com/Adi26-pixel/process-page.git" target="_blank"
+        >Adeline Monsengo</a
+      >
+      | Challenge by
       <a href="https://www.devchallenges.io?ref=challenge" target="_blank"
         >devChallenges.io</a
       >.
