Added the styles and media queries

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             Figma.
           </p>
         </div>
-        <div class="card">
+        <div class="card card-two">
           <img src="resources/process-icon-2.svg" alt="icon two" />
           <h2>Documentation</h2>
           <p>
@@ -45,7 +45,7 @@
             for your team in <span>one place.</span>
           </p>
         </div>
-        <div class="card">
+        <div class="card card-three">
           <img src="resources/process-icon-3.svg" alt="icon three" />
           <h2>Design faster</h2>
           <p>
@@ -55,7 +55,7 @@
             you start.
           </p>
         </div>
-        <div class="card">
+        <div class="card card-four">
           <img src="resources/process-icon-4.svg" alt="icon four" />
           <h2>Customize</h2>
           <p>
